--- a/StandApp/StandApp/Base.lproj/Main.storyboard
+++ b/StandApp/StandApp/Base.lproj/Main.storyboard
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -26,8 +28,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Gii-Xh-Ek6" secondAttribute="trailing" constant="-162" id="8kX-jg-fiq"/>
                             <constraint firstAttribute="centerX" secondItem="Gii-Xh-Ek6" secondAttribute="centerX" id="TlF-T6-IJv"/>
                             <constraint firstItem="Gii-Xh-Ek6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="UaW-xb-6RU"/>
+                            <constraint firstItem="Gii-Xh-Ek6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-162" id="Upr-7V-X7j"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Gii-Xh-Ek6" secondAttribute="bottom" id="brS-1k-lA1"/>
                         </constraints>
                     </view>
