--- a/StandApp/StandApp/Base.lproj/Main.storyboard
+++ b/StandApp/StandApp/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -25,6 +24,12 @@
                                     <constraint firstAttribute="width" secondItem="Gii-Xh-Ek6" secondAttribute="height" multiplier="1:1" id="WRv-xF-Oy2"/>
                                 </constraints>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dec2.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ztr-it-Rvq">
+                                <rect key="frame" x="72" y="28" width="240" height="128"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dec1.png" translatesAutoresizingMaskIntoConstraints="NO" id="ybe-dF-I1y">
+                                <rect key="frame" x="9" y="298" width="356" height="71"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -45,4 +50,8 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="dec1.png" width="1204" height="147"/>
+        <image name="dec2.png" width="618" height="307"/>
+    </resources>
 </document>
