--- a/StandApp/StandApp/Base.lproj/Main.storyboard
+++ b/StandApp/StandApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -24,20 +24,32 @@
                                     <constraint firstAttribute="width" secondItem="Gii-Xh-Ek6" secondAttribute="height" multiplier="1:1" id="WRv-xF-Oy2"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dec2.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ztr-it-Rvq">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="dec2.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ztr-it-Rvq">
                                 <rect key="frame" x="72" y="28" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Ztr-it-Rvq" secondAttribute="height" multiplier="15:8" id="Jb6-Wq-vUj"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dec1.png" translatesAutoresizingMaskIntoConstraints="NO" id="ybe-dF-I1y">
-                                <rect key="frame" x="9" y="298" width="356" height="71"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="dec1.png" translatesAutoresizingMaskIntoConstraints="NO" id="ybe-dF-I1y">
+                                <rect key="frame" x="19" y="311" width="356" height="71"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ybe-dF-I1y" secondAttribute="height" multiplier="356:71" id="glS-mv-is7"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ztr-it-Rvq" secondAttribute="trailing" constant="10" id="0Je-Bw-Xs3"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Gii-Xh-Ek6" secondAttribute="trailing" constant="-162" id="8kX-jg-fiq"/>
+                            <constraint firstItem="Ztr-it-Rvq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="OfX-Gf-gFU"/>
                             <constraint firstAttribute="centerX" secondItem="Gii-Xh-Ek6" secondAttribute="centerX" id="TlF-T6-IJv"/>
                             <constraint firstItem="Gii-Xh-Ek6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="UaW-xb-6RU"/>
                             <constraint firstItem="Gii-Xh-Ek6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-162" id="Upr-7V-X7j"/>
+                            <constraint firstItem="ybe-dF-I1y" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="X9V-Vf-3FY"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ybe-dF-I1y" secondAttribute="bottom" constant="200" id="ZdQ-uj-JTn"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Gii-Xh-Ek6" secondAttribute="bottom" id="brS-1k-lA1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ybe-dF-I1y" secondAttribute="trailing" constant="10" id="c0R-lB-2Bn"/>
+                            <constraint firstItem="Ztr-it-Rvq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="z2W-Mt-iio"/>
                         </constraints>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
